# morph-rs

./: .changelog.md  .gitignore  Cargo.toml  Presentazione.md  Presentazione0.1.1.md  README.md  license.md
benches/: Experiments_result.md  benches.rs  benchmarks.md
benches/data/: inflect.txt  words.txt
data/test/: piccolo_dict.xml  senza_grams.xml  small_dict.xml  smallest_dict.xml  test_bolshe.xml  test_dict.xml  test_lemma.xml
src/: errors.rs  lib.rs  main.rs  test_infrastructure.rs
src/analyzer/: declension.rs  dictionary.rs  mod.rs  morpholyzer.rs  pretty_display.rs  vangovanie.rs
src/morph/: grammemes.rs  mod.rs  vanga.rs
src/opencorpora/: dictionary.rs  mod.rs
