[package]
name = "morph-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["display"]

[dependencies]
# bincode = "1.3.3" может быть понадобится
clap = { version = "4.4", features = ["derive"] }
itertools = "0.12"
quick-xml = { version = "=0.30.0", features = ["serde", "serialize", "serde-types"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-case = "3.2"
tracing = "0.1"
tracing-subscriber = "0.3"
smallstr = { version = "0.3", features = ["serde"] }
smallvec = { version = "1.4.1", features = ["serde"] }
allocative = "0.3"
thiserror = "1.0.51"

# Data
fst = "0.4"
memmap = "0.7"

# Alloc and memory optimization
mimalloc = { version = "*", default-features = false }
tikv-jemallocator = "0.5"

# Benches
criterion = "0.5"
rayon = "1.8"
thread_local = "*"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
pyo3 = { version = "0.20", features = ["auto-initialize"] }

[[bench]]
name = "benches"
harness = false

[profile.production]
inherits = "release"
strip = "debuginfo"
debug = false
lto = "fat"
