[package]
name = "morph-rs"
version = "0.2.0"
edition = "2021"
authors = ["Veta Kosareva <veta.kosareva@gmail.com>"]
description = "Dictionary Morphologizer for Russian language"
license-file = "license.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
test-case = "3.2"
csv = "1.3"
voca_rs = "1.15"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# Benches
criterion = "0.5"
rayon = "1.8"
thread_local = "*"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["display"]

[dependencies]
# Data
fst = "0.4"
memmap = "0.7"

# Alloc and memory optimization
mimalloc = { version = "*", default-features = false }
tikv-jemallocator = "0.5"

# Helpers
clap = { version = "4.4", features = ["derive"] }
itertools = "0.12"
quick-xml = { version = "=0.30.0", features = ["serde", "serialize", "serde-types"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = "0.3"
smallstr = { version = "0.3", features = ["serde"] }
smallvec = { version = "1.4.1", features = ["serde"] }
allocative = "0.3"
thiserror = "1.0"
tempfile = "3.10"

[[bench]]
name = "benches"
harness = false

[profile.production]
inherits = "release"
strip = "debuginfo"
debug = false
lto = "fat"
